--- a/robotnordic.css
+++ b/robotnordic.css
@@ -23,16 +23,19 @@
 /* --------- Baggrunds javascript -----------*/
 #canvas_container{
   width: 100%;
-  height:812px;
+  height: 812px;
   margin:0;
   position: absolute;
+  overflow: hidden
 }
 #my_canvas{
  display: block;
  float: left;
  width: 100%;
  z-index: 1;
+ overflow-y: scroll;
 }
+
 
 
 /* --------- menu baren -----------*/
@@ -925,12 +928,14 @@ option {
     height: 812px;
     margin:0;
     position: absolute;
+    overflow: hidden
   }
   #my_canvas{
    display: block;
    float: left;
    width: 100%;
    z-index: 1;
+   overflow-y: scroll;
   }
 
 
