--- a/robotnordic.css
+++ b/robotnordic.css
@@ -246,6 +246,112 @@ button{
 
 @media screen and (min-device-width: 181px) and (max-device-width: 767px) {
 /*---------- forside.html ---------*/
+/* slidshow*/
+* {box-sizing: border-box}
+body {font-family: Raleway, bold; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.slideshow-container img {
+  width: 100%;
+  margin: auto;
+  margin-top: 1%;
+  display: block;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 40px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #000000;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+/*.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+*/
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
 
 /*-----------knapper---------*/
 
@@ -330,10 +436,10 @@ button{
 .custom-select {
   position: absolute;
   font-family: 'Raleway', sans-serif;
-  margin-top: 60%;
+  margin-top: 0;
   padding: 18px 14px;
-  width: 120%;
-  margin-left: -15%;
+  width: 108%;
+  margin-left: -4%;
   font-size: 18px;
   letter-spacing: 4px;
 }
@@ -347,7 +453,6 @@ button{
     background-color: #5eb5eb;
     display: block;
     position: relative;
-    margin: -45% 0 0 10%;
     z-index: 1;
   }
 
@@ -387,8 +492,8 @@ button{
     background-color: #313c40;
     opacity: 0.8;
     top: 80%;
-    margin: -32% 0% 0% 9%;
-    width: 84%;
+    margin: 0% 0% 0% 0%;
+    width: 94%;
   }
 
   /*hide the items when the select box is closed:*/
@@ -886,6 +991,7 @@ option {
 .infoknap-content {
   background-color: #fefefe;
   margin: auto;
+  margin-top: -25%;
   padding: 20px;
   border: 1px solid #888;
   width: 95%;
@@ -1158,17 +1264,124 @@ option {
 
   /*-----------knapper---------*/
 
+  /* slidshow*/
+  * {box-sizing: border-box}
+  body {font-family: Raleway, bold; margin:0}
+  .mySlides {display: none}
+  img {vertical-align: middle;}
+
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+
+  .slideshow-container img {
+    width: 60%;
+    margin: auto;
+    margin-top: 1%;
+    display: block;
+  }
+
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: black;
+    font-weight: bold;
+    font-size: 40px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+
+  /* Caption text */
+  .text {
+    color: #000000;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+
+  /* Fading animation */
+  /*.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  */
+
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .prev, .next,.text {font-size: 11px}
+  }
+
+
   .menuknap {
     position: relative;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     letter-spacing: 4px;
     background: #313c40;
-    margin-top: 2%;
-    margin-left:15%;
+    margin:1% auto;
     text-align: center;
     padding: 18px 14px;
-    width: 70%;
+    width: 60%;
     color:white;
     border-radius: 18px;
   }
@@ -1178,11 +1391,10 @@ option {
     font-size: 18px;
     letter-spacing: 4px;
     background: #313c40;
-    margin-top: 10%;
-    margin-left:15%;
+    margin:1% auto;
     text-align: center;
     padding: 18px 14px;
-    width: 70%;
+    width: 60%;
     color:white;
     border-radius: 18px;
   }
@@ -1193,11 +1405,10 @@ option {
     font-size: 18px;
     letter-spacing: 4px;
     background: #313c40;
-    margin-top: 10%;
-    margin-left:15%;
+    margin:1% auto;
     text-align: center;
     padding: 18px 14px;
-    width: 70%;
+    width: 60%;
     color:white;
     border-radius: 18px;
   }
@@ -1239,10 +1450,9 @@ option {
   .custom-select {
     position: absolute;
     font-family: 'Raleway', sans-serif;
-    margin-top: 20%;
-    margin-left: 5%;
+    margin: auto;
     padding: 18px 14px;
-    width: 90%;
+    width: 100%;
     font-size: 18px;
     letter-spacing: 4px;
   }
@@ -1253,8 +1463,7 @@ option {
     }
 
     .select-selected {
-      background-color: #313c40;
-      border-radius: 18px;
+      background-color: #5eb5eb;
     }
 
     /* design af pil ned */
@@ -1293,9 +1502,8 @@ option {
       background-color: #313c40;
       opacity: 0.8;
       top: 80%;
-      margin-left: 1%;
-      width: 91%;
-      border-radius: 0px 0px 18px 18px;
+      margin:auto;
+      width: 96.3%;
     }
 
     /*hide the items when the select box is closed:*/
@@ -1791,6 +1999,7 @@ option {
   .infoknap-content {
     background-color: #fefefe;
     margin: auto;
+    margin-top: -25%;
     padding: 20px;
     border: 1px solid #888;
     width: 95%;
@@ -2047,6 +2256,112 @@ button{
 @media screen and (min-width: 1101px) {
 
   /*---------- forside.html ---------*/
+  /* slidshow*/
+    * {box-sizing: border-box}
+    body {font-family: Raleway, bold; margin:0}
+    .mySlides {display: none}
+    img {vertical-align: middle;}
+
+    /* Slideshow container */
+    .slideshow-container {
+      max-width: 1000px;
+      position: relative;
+      margin: auto;
+    }
+
+    .slideshow-container img {
+      width: 100%;
+      margin: auto;
+      margin-top: 1%;
+      display: block;
+    }
+
+    /* Next & previous buttons */
+    .prev, .next {
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      width: auto;
+      padding: 16px;
+      margin-top: -22px;
+      color: black;
+      font-weight: bold;
+      font-size: 40px;
+      transition: 0.6s ease;
+      border-radius: 0 3px 3px 0;
+      user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+      right: 0;
+      border-radius: 3px 0 0 3px;
+    }
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover, .next:hover {
+      background-color: rgba(0,0,0,0.8);
+    }
+
+    /* Caption text */
+    .text {
+      color: #000000;
+      font-size: 15px;
+      padding: 8px 12px;
+      position: absolute;
+      bottom: 8px;
+      width: 100%;
+      text-align: center;
+    }
+
+    /* Number text (1/3 etc) */
+    .numbertext {
+      color: #f2f2f2;
+      font-size: 12px;
+      padding: 8px 12px;
+      position: absolute;
+      top: 0;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+      cursor: pointer;
+      height: 15px;
+      width: 15px;
+      margin: 0 2px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      transition: background-color 0.6s ease;
+    }
+
+    .active, .dot:hover {
+      background-color: #717171;
+    }
+
+    /* Fading animation */
+    /*.fade {
+      -webkit-animation-name: fade;
+      -webkit-animation-duration: 1.5s;
+      animation-name: fade;
+      animation-duration: 1.5s;
+    }
+    */
+
+    @-webkit-keyframes fade {
+      from {opacity: .4}
+      to {opacity: 1}
+    }
+
+    @keyframes fade {
+      from {opacity: .4}
+      to {opacity: 1}
+    }
+
+    /* On smaller screens, decrease text size */
+    @media only screen and (max-width: 300px) {
+      .prev, .next,.text {font-size: 11px}
+    }
 
   /*-----------knapper---------*/
 
@@ -2240,7 +2555,7 @@ button{
     color: #ffffff;
     cursor: pointer;
     padding: 28px;
-    width: 80%;
+    width: 40%;
     align-items: center;
     border: none;
     border-radius: 10px;
@@ -2249,7 +2564,8 @@ button{
     font-size: 25px;
     transition: 0.4s;
     position: relative;
-    margin: 15% 10% 0 10%;
+    display: block;
+    margin: 5% auto 0%;
   }
 
   .accordion2 {
@@ -2257,7 +2573,7 @@ button{
     color: #ffffff;
     cursor: pointer;
     padding: 28px;
-    width: 80%;
+    width: 40%;
     align-items: center;
     border: none;
     border-radius: 10px;
@@ -2266,9 +2582,8 @@ button{
     font-size: 25px;
     transition: 0.4s;
     position: relative;
-    margin: auto;
     display: block;
-    margin-top: 5%;
+    margin: 5% auto 0%;
   }
 
   .accordion::after {
@@ -2277,7 +2592,6 @@ button{
   }
 
   .panel {
-    margin: 0 10% 0 10%;
     padding: 5% 5% 5% 5%;
     display: none;
     background-color: white;
@@ -2286,6 +2600,10 @@ button{
     font-size: 20px;
     border:1px solid #717171;
     border-radius: 10px;
+    width: 40%;
+    display: block;
+    margin: 0% auto 0%;
+
 
   }
 
@@ -2451,12 +2769,12 @@ button{
 
   .Nulstil {
     position: relative;
-    display: block;
+    display: inline-block;
     background-color: #F25835;
     color: white;
-    margin: auto;
-    margin-top: 20%;
-    width: 50%;
+    margin-top: 5%;
+    margin-left: 27%;
+    width: 15%;
     padding: 3% 3% 3% 3%;
     border-radius: 10px;
     font-size: 16px;
@@ -2465,13 +2783,12 @@ button{
 
   .GemPalle {
     position: relative;
-    display: block;
+    display: inline-block;
     background-color: white;
     border: 1px solid #F25835;
     color: #F25835;
-    margin: auto;
     margin-top: 5%;
-    width: 50%;
+    width: 15%;
     padding: 3% 3% 3% 3%;
     border-radius: 10px;
     font-size: 16px;
@@ -2479,13 +2796,11 @@ button{
 
   .Videre {
     position: relative;
-    display: block;
+    display: inline-block;
     background-color: #5eb5eb;
     color: white;
-    margin: auto;
     margin-top: 5%;
-    margin-bottom: 10%;
-    width: 50%;
+    width: 15%;
     padding: 3% 3% 3% 3%;
     border-radius: 10px;
     font-size: 16px;
@@ -2694,7 +3009,7 @@ button{
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 95%;
+    width: 60%;
     z-index: 99;
   }
 
@@ -2713,106 +3028,4 @@ button{
     cursor: pointer;
   }
 
-}
-
-
-
-/* slidshow*/
-* {box-sizing: border-box}
-body {font-family: Raleway, bold; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #000000;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-/*.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-*/
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
 }
