--- a/robotnordic.css
+++ b/robotnordic.css
@@ -18,6 +18,10 @@
 
 }
 
+.infografi {
+  width:100%;
+  height: auto;
+}
 
 
 /* --------- Baggrunds javascript -----------*/
@@ -590,7 +594,7 @@ img {vertical-align: middle;}
   font-size: 20px;
   border:1px solid #717171;
   border-radius: 10px;
-
+  text-decoration: none;
 }
 
 .accordion3 {
@@ -636,6 +640,14 @@ input {
   border: 1px solid #717171;
   padding-left: 10px;
 }
+#formularvalg1 {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #717171;
+  padding-left: 10px;
+}
+
 
 option {
   font-size: 25px;
@@ -971,6 +983,7 @@ option {
   background: url(img/infoknap.png);
   background-repeat: no-repeat;
   border-radius: 100%;
+  text-decoration: none;
 }
 
 .modal {
@@ -1028,7 +1041,11 @@ option {
 
   }
 
-
+  .infografi {
+    width:100%;
+    height: auto;
+  }
+  
 
   /* --------- Baggrunds javascript -----------*/
   #canvas_container{
@@ -1956,7 +1973,6 @@ option {
   }
 
   .back-pil{
-    background-image: url(img/back-pil-01-01.png); /* 16px x 16px */
      background-color: transparent; /* make the button transparent */
      background-repeat: no-repeat;  /* make the background image appear only once */
      background-position: 0px 0px;  /* equivalent to 'top left' */
@@ -2023,6 +2039,12 @@ option {
 }
 
 @media screen and (min-width: 1101px) {
+  
+.infografi {
+  width:100%;
+  height: auto;
+}
+  
 
 /* --------- Baggrunds javascript -----------*/
 #canvas_container{
@@ -2805,6 +2827,7 @@ button{
     border-radius: 10px;
     font-size: 16px;
   }
+  
 
 
   .h1-text{
@@ -2964,7 +2987,6 @@ button{
   }
 
   .back-pil{
-    background-image: url(img/back-pil-01-01.png); /* 16px x 16px */
      background-color: transparent; /* make the button transparent */
      background-repeat: no-repeat;  /* make the background image appear only once */
      background-position: 0px 0px;  /* equivalent to 'top left' */
