--- a/robotnordic.css
+++ b/robotnordic.css
@@ -23,23 +23,6 @@
 }
 
 
-/* --------- Baggrunds javascript -----------*/
-#canvas_container{
-  width: 100%;
-  height: 812px;
-  margin:0;
-  position: absolute;
-  overflow: hidden
-}
-#my_canvas{
- display: block;
- float: left;
- width: 100%;
- z-index: 1;
- overflow-y: scroll;
- opacity: 60%;
-}
-
 
 
 /* --------- menu baren -----------*/
@@ -980,6 +963,7 @@ option {
   height: 28px;
   background: url(img/infoknap.png);
   background-repeat: no-repeat;
+  float:right;
   border-radius: 100%;
   text-decoration: none;
 }
@@ -1992,6 +1976,7 @@ option {
     height: 28px;
     background: url(img/infoknap.png);
     background-repeat: no-repeat;
+    float:right;
     border-radius: 100%;
   }
 
@@ -3009,6 +2994,7 @@ button{
     height: 28px;
     background: url(img/infoknap.png);
     background-repeat: no-repeat;
+    float:right;
     border-radius: 100%;
   }
 
