--- a/robotnordic.css
+++ b/robotnordic.css
@@ -694,6 +694,8 @@ option {
   -ms-user-select: none;
   user-select: none;
   margin: 0% 0% 5% 0%;
+  width: 1%;
+  white-space: nowrap;
 }
 
 /* Hide the browser's default checkbox */
@@ -1709,6 +1711,8 @@ option {
     -ms-user-select: none;
     user-select: none;
     margin: 0% 0% 5% 0%;
+    width: 1%;
+    white-space: nowrap;
   }
 
   /* Hide the browser's default checkbox */
@@ -2722,6 +2726,8 @@ button{
     -ms-user-select: none;
     user-select: none;
     margin: 0% 0% 5% 0%;
+    width: 1%;
+    white-space: nowrap;
   }
 
   /* Hide the browser's default checkbox */
