--- a/robotnordic.css
+++ b/robotnordic.css
@@ -2812,7 +2812,7 @@ button{
     font-size: 16px;
   }
 
-/*  .knap {
+ /*.knappen {
     position: relative;
     display: inline-block;
     background-color: #5eb5eb;
@@ -3052,7 +3052,7 @@ button{
 .knap {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 2; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
@@ -3061,18 +3061,20 @@ button{
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    position: relative;
-    display: inline-block;
-    background-color: #5eb5eb;
-    color: white;
-    margin-top: 5%;
-    width: 15%;
-    padding: 3% 3% 3% 3%;
-    border-radius: 10px;
-    font-size: 16px;
   }
 }
 
+.knappen {
+  position: relative;
+  display: inline-block;
+  background-color: #5eb5eb;
+  color: white;
+  margin-top: 5%;
+  width: 15%;
+  padding: 3% 3% 3% 3%;
+  border-radius: 10px;
+  font-size: 16px;
+}
 /* Modal Content */
 .vindue-content {
   background-color: #fefefe;
@@ -3083,15 +3085,15 @@ button{
 }
 
 /* The Close Button */
-.close {
+.luk {
   color: #aaaaaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.luk:hover,
+.luk:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
